CodeFile: fix in dark mode

--- a/src/CodeFile/index.scss
+++ b/src/CodeFile/index.scss
@@ -1,7 +1,12 @@
 @use "sass:map";
 
 @use "../sass/tokens";
+@use "../sass/mixins";
 
 .code-file__heading code {
   font-family: map.get(tokens.$fonts, mono);
+  color: map.get(tokens.$brand, white);
+  @include mixins.light-mode {
+    color: map.get(tokens.$brand, black);
+  }
 }
